--- a/HTML/33.1 HTML Table Border.html
+++ b/HTML/33.1 HTML Table Border.html
@@ -5,6 +5,17 @@
 table, th, td {
     border: 1px solid black;
 }
+th{
+  padding:12px; 
+  color:red; 
+  font-size:30px;
+}
+td{
+  color:green; 
+  text-align: center; 
+  padding:10px; 
+
+}
 </style>
 </head>
 <body>
@@ -16,14 +27,14 @@ table, th, td {
     <th>Age</th>
   </tr>
   <tr>
-    <td>A</td>
+    <td rowspan="2">A</td>
     <td>B</td>
     <td>50</td>
   </tr>
   <tr>
     <td>E</td>
     <td>J</td>
-    <td>94</td>
+    
   </tr>
   <tr>
     <td>J</td>
