--- a/Javascript/06.1 scope.html
+++ b/Javascript/06.1 scope.html
@@ -1,10 +1,16 @@
-<html>
-   <body onload = checkscope();>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+</head>
+<body onload = checkScope();>
       
       <script type = "text/javascript">
          
             var myVar = "global"; // Declare a global variable
-            function checkscope( ) {
+            function checkScope( ) {
                var myVar = "local";  // Declare a local variable
                document.write(myVar);
             }
